--- a/MedicalLink/App.config
+++ b/MedicalLink/App.config
@@ -5,15 +5,16 @@
   </configSections>
   <log4net debug="true">
     <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="Logs\LogSystem.txt" />
+      <file type="log4net.Util.PatternString" value="Logs\\LogSystem_%date{yyyyMMdd}.log" />
       <appendToFile value="true" />
-      <rollingStyle value="Size" />
+      <rollingStyle value="Date" />
+      <preserveLogFileNameExtension value="true" />
       <maxSizeRollBackups value="10" />
-      <maximumFileSize value="2MB" />
+      <maximumFileSize value="10MB" />
       <staticLogFileName value="true" />
       <encoding value="utf-8" />
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%-5p %d %5rms %-22.22c{1} %-18.18M - %m%n" />
+        <conversionPattern value="%date [%thread] %level %logger - %message%newline" />
       </layout>
     </appender>
     <root>
